--- a/project/index.html
+++ b/project/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="stylesheet" href="css/style2.css">
+
+   <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>ВоItинск</title>
 </head>
 <body>
-   <div>
+	<div class="nav"><a href="">Президенты</a><a href="">СМИ</a><a href="">Банк</a></div>
+   	<div class="text"><h2 class="podname">Государство</h2>
     <h1 class="name">ВоItинск</h1>
-    </div>
+
+	</div>
+    
 </body>
 </html>
