--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <title>ВоItинск</title>
 </head>
