--- a/project/index.html
+++ b/project/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/style2.css">
     <meta charset="UTF-8">
     <title>ВоItинск</title>
 </head>
 <body>
-	<div class="nav"><a href="">Президенты</a><a href="">СМИ</a><a href="">Банк</a></div>
-   	<div class="text"><h2 class="podname">Государство</h2>
+   <div>
     <h1 class="name">ВоItинск</h1>
-
-	</div>
-    
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
